Added & ordered next steps

--- a/dev notes/Sat Jul 12 11:43:43 2025.md
+++ b/dev notes/Sat Jul 12 11:43:43 2025.md
@@ -15,6 +15,8 @@ I then briefly created a simple implementation of a makefile in cpp (for no reas
 me since I have coded at all (okay it's been like 6 months but still)) to automate compilation, assemblage, and linking to produce an executable.
 
 My next steps are to:
+ - Split tokenization functinality into class files (.hpp and .cpp)
+ - Fortify (and eventually harden) code
  - Implement test cases
  - Extend tokenizing (lexing) to include more, such as:
     - Open/Close parenthesis (for conditions)
@@ -24,7 +26,6 @@ My next steps are to:
     - Equation (=)
     - Basic alphabetical variables
  - Develop a Parser following an Abstract Syntax Tree (AST)
- - Fortify (and eventually harden) code
  - Extend code generation functionality
 
 Also, these are other sources that I additionally found helpful:
