--- a/dev notes/Sat Jul 12 12:36:41 2025.md
+++ b/dev notes/Sat Jul 12 12:36:41 2025.md
@@ -14,6 +14,8 @@ Got nothing to yap about yet.
 # TODO
 
 - Create extensive test files for compiler.cpp, token, and tokenizer.
+- Update formatting for dev_note_gen.cpp
+  - Currently using std::asctime(local_tm), swap format to MM-DD HH:MM:SS YYYY. Keep using 24hr format.
 - Extend tokenizer TokenType functionality
   > - Open/Close parenthesis (for conditions)
   > - Open/Close Braces (for bodies)
