--- a/dev notes/2025-07-12 12:36:41.md
+++ b/dev notes/2025-07-12 12:36:41.md
@@ -10,6 +10,12 @@ Got nothing to yap about yet.
 - Fixed bugs in private tool for dev note generation
 - Fortify all currently existing files (except make for now).
 - Update formatting for dev_note_gen.cpp
+- Extend tokenizer TokenType functionality
+  > - Open/Close parenthesis (for conditions)
+  > - Open/Close Braces (for bodies)
+  > - Addition
+  > - Subtraction
+  > - Equation (=)
 
 
 # TODO
@@ -17,9 +23,4 @@ Got nothing to yap about yet.
 - Create extensive test files for compiler.cpp, token, and tokenizer.
   - Currently using std::asctime(local_tm), swap format to YYYY-MM-DD HH:MM:SS . Keep using 24hr format.
 - Extend tokenizer TokenType functionality
-  > - Open/Close parenthesis (for conditions)
-  > - Open/Close Braces (for bodies)
-  > - Addition
-  > - Subtraction
-  > - Equation (=)
   > - Basic alphabetical variables
